--- a/src/notebook/R1_SliceEquivalence.ipynb
+++ b/src/notebook/R1_SliceEquivalence.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result 1: Slices Equivalence"
+    "## Result 1: Slices Equivalence\n",
+    "BANKSY identified two subtypes in mature oligodendrocytes (MOD)  \n",
+    "- These were primarily shown at Bregma = 0.16 and 0.26 in their paper  \n",
+    "- The findings consistently appear across slices in similar regions  \n",
+    "\n",
+    "In this project, the main goal is to examine if the two subtypes are truly distinct.   \n",
+    "However, this project is based on transcripts from a slice at Bregma -0.24. It's necessary to show the slices equivalence.  \n"
    ]
   },
   {
@@ -20,76 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io import mmread\n",
     "from pathlib import Path\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import numpy as np\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Signals in the Tissue Section"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "signal_data_folder_path = Path(\"../data/mouse_hypothalamus/raw/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = [\n",
-    "    \"Centroid_X\",\n",
-    "    \"Centroid_Y\",\n",
-    "    \"Centroid_Z\",\n",
-    "    \"Gene_name\",\n",
-    "    \"Cell_name\",\n",
-    "    \"Total_brightness\",\n",
-    "    \"Area\",\n",
-    "    \"Error_bit\",\n",
-    "    \"Error_direction\",\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df = pd.read_csv(\n",
-    "    signal_data_folder_path / \"merfish_barcodes_example.csv\", usecols=columns\n",
-    ").rename(\n",
-    "    columns={\n",
-    "        \"Centroid_X\": \"x\",\n",
-    "        \"Centroid_Y\": \"y\",\n",
-    "        \"Centroid_Z\": \"z\",\n",
-    "        \"Gene_name\": \"gene\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# remove dummy molecules\n",
-    "signal_coordinate_df = signal_coordinate_df.loc[\n",
-    "    ~signal_coordinate_df[\"gene\"].str.contains(\"Blank|NegControl\"),\n",
-    "]\n",
-    "\n",
-    "signal_coordinate_df[\"gene\"] = signal_coordinate_df[\"gene\"].astype(\"category\")\n",
-    "\n",
-    "# shift the coordinates to avoid the negative values\n",
-    "coordinate_x_m =  signal_coordinate_df['x'].min()\n",
-    "coordinate_y_m =  signal_coordinate_df['y'].min()\n",
-    "signal_coordinate_df['x'] = signal_coordinate_df['x'] - coordinate_x_m\n",
-    "signal_coordinate_df['y'] = signal_coordinate_df['y'] - coordinate_y_m\n",
-    "\n",
-    "# make a copy to avoid SettingWithCopyWarning\n",
-    "signal_coordinate_df = signal_coordinate_df.copy()"
    ]
   },
   {
@@ -105,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "banksy_folder_path = Path(\"../data/banksy_results/\")"
+    "banksy_folder_path = Path(\"../../data/banksy_results/\")"
    ]
   },
   {
@@ -132,11 +71,6 @@
     "    }\n",
     ")\n",
     "\n",
-    "# banksy_result = banksy_result[banksy_result['Bregma'] == -0.24]\n",
-    "\n",
-    "banksy_result['x'] = banksy_result['x'] - coordinate_x_m\n",
-    "banksy_result['y'] = banksy_result['y'] - coordinate_y_m\n",
-    "\n",
     "banksy_result = banksy_result.copy()"
    ]
   },
@@ -153,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg_data_path = Path(\"../data/mouse_hypothalamus/all_cells\")"
+    "MERFISH_data_folder_path = Path(\"../../data/mouse_hypothalamus/MERFISH/\")"
    ]
   },
   {
@@ -163,7 +97,7 @@
    "outputs": [],
    "source": [
     "merfish_data = pd.read_csv(\n",
-    "    seg_data_path / \"merfish_all_cells.csv\"\n",
+    "    MERFISH_data_folder_path / \"merfish_all_cells.csv\"\n",
     "    ).rename(\n",
     "    columns={\n",
     "        \"Centroid_X\": \"x\",\n",
@@ -174,32 +108,10 @@
     "merfish_data = merfish_data.drop(columns=[col for col in merfish_data.columns if col == 'Fos' or col.startswith('Blank_')])\n",
     "merfish_data = merfish_data[merfish_data[\"Cell_class\"] != \"Ambiguous\"]\n",
     "merfish_data = merfish_data[merfish_data['Animal_ID'] == 1]\n",
-    "# merfish_data = merfish_data[merfish_data['Bregma'] == -0.24]\n",
-    "\n",
-    "merfish_data['x'] = merfish_data['x'] - coordinate_x_m\n",
-    "merfish_data['y'] = merfish_data['y'] - coordinate_y_m\n",
     "\n",
     "merfish_data['banksy'] = banksy_result['banksy_cluster'].values\n",
     "\n",
     "merfish_data = merfish_data.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merfish_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merfish_data.columns[9:29]"
    ]
   },
   {
@@ -222,7 +134,7 @@
     "unique_other_labels = [label for label in all_labels if label not in color_map]\n",
     "num_other_labels = len(unique_other_labels)\n",
     "\n",
-    "colormap = plt.cm.get_cmap('tab20b', num_other_labels)\n",
+    "colormap = plt.get_cmap('tab20b', num_other_labels)\n",
     "other_colors = {label: colormap(i) for i, label in enumerate(unique_other_labels)}\n",
     "\n",
     "full_color_map = {**color_map, **other_colors}"
@@ -232,7 +144,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### all cell types"
+    "### All Cell Types\n",
+    "BANKSY applied spatial clustering to all slices using identical parameters.\n",
+    "Here, slices at Bregma = -0.24, 0.16, and 0.26 are compared to assess: \n",
+    "- whether the same cell types appear across slices\n",
+    "- whether they occupy similar spatial regions"
    ]
   },
   {
@@ -242,7 +158,10 @@
    "outputs": [],
    "source": [
     "# Bregma = -0.24\n",
-    "banksy_024 = banksy_result[banksy_result['Bregma'] == -0.24]"
+    "banksy_024 = banksy_result[banksy_result['Bregma'] == -0.24].copy()\n",
+    "\n",
+    "banksy_024['x'] = banksy_024['x'] - banksy_024['x'].min()\n",
+    "banksy_024['y'] = banksy_024['y'] - banksy_024['y'].min()"
    ]
   },
   {
@@ -318,7 +237,7 @@
     "plt.title(\"Bregma 0.16 mm\")\n",
     "plt.xlabel(\"(μm)\")\n",
     "plt.ylabel(\"(μm)\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -370,7 +289,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### stacked bar plot"
+    "### Stacked Bar Plot\n",
+    "Used to compare cell type proportions across slices, as part of the equivalence analysis."
    ]
   },
   {
@@ -394,7 +314,7 @@
     "unique_other_labels = [label for label in all_labels if label not in color_map]\n",
     "num_other_labels = len(unique_other_labels)\n",
     "\n",
-    "colormap = plt.cm.get_cmap('tab20b', num_other_labels)\n",
+    "colormap = plt.get_cmap('tab20b', num_other_labels)\n",
     "other_colors = {label: colormap(i) for i, label in enumerate(unique_other_labels)}\n",
     "full_color_map = {**color_map, **other_colors}\n",
     "\n",
@@ -424,7 +344,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### UMAP"
+    "### UMAP\n",
+    "UMAP embeddings from BANKSY is used to visually compare clustering consistency across slices.  "
    ]
   },
   {
@@ -576,7 +497,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MOD distribution"
+    "### MOD Distribution\n",
+    "MOD subtypes are identified in all slices and localize to similar regions, supporting spatial and compositional equivalence across slices.\n"
    ]
   },
   {
@@ -709,7 +631,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ovrlpy",
+   "display_name": "ovrlpy_0513",
    "language": "python",
    "name": "python3"
   },
@@ -723,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
