--- a/src/notebook/R3_TranscriptsNeighbours.ipynb
+++ b/src/notebook/R3_TranscriptsNeighbours.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result 3: transcript neighborhood"
+    "## Result 3: transcript neighborhood\n",
+    "\n",
+    "to do:  \n",
+    "\n",
+    "<ul>\n",
+    "  <li><input type=\"checkbox\"> load ovrlpy results</li>\n",
+    "  <li><input type=\"checkbox\"> data path</li>\n",
+    "  <li><input type=\"checkbox\"> ROI functions: cell vsi and related plot function</li>\n",
+    "  <li><input type=\"checkbox\"> ROI: R3</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -303,6 +312,543 @@
     "DE_genes_gm = ['Mlc1', 'Dgkk', 'Cbln2', 'Syt4', 'Gad1', 'Plin3', 'Gnrh1', 'Sln', 'Gjc3']\n",
     "# DE_genes_wm: 8\n",
     "DE_genes_wm = ['Mbp', 'Lpar1', 'Trh', 'Ucn3', 'Cck']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regions of Interest\n",
+    "\n",
+    "cell types and vsi\n",
+    "\n",
+    "x_range=[250, 350], y_range=[1450, 1550]  \n",
+    "x_range=[1350, 1450], y_range=[1300, 1400]  \n",
+    "x_range=[850, 950], y_range=[1050, 1150]  \n",
+    "x_range=[350, 450], y_range=[650, 750]  \n",
+    "x_range=[1300, 1400], y_range=[400, 500] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.patches as patches\n",
+    "\n",
+    "def plot_vsi_with_squares(\n",
+    "    cell_integrity,\n",
+    "    cell_strength,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\"):\n",
+    "    # Validate inputs\n",
+    "    if not (isinstance(cell_integrity, np.ndarray) and cell_integrity.ndim == 2):\n",
+    "        raise ValueError(\"cell_integrity must be a 2D numpy array.\")\n",
+    "    if not (isinstance(cell_strength, np.ndarray) and cell_strength.ndim == 2):\n",
+    "        raise ValueError(\"cell_strength must be a 2D numpy array.\")\n",
+    "\n",
+    "    figure_aspect_ratio = cell_integrity.shape[0] / cell_integrity.shape[1]\n",
+    "\n",
+    "    with plt.style.context(\"dark_background\"):\n",
+    "        # Handle colormap\n",
+    "        if cmap == \"BIH\":\n",
+    "            try:\n",
+    "                cmap = _BIH_CMAP\n",
+    "            except NameError:\n",
+    "                raise ValueError(\"BIH colormap is not defined.\")\n",
+    "\n",
+    "        fig, ax = plt.subplots(\n",
+    "            1, 1, figsize=(figure_height / figure_aspect_ratio, figure_height),\n",
+    "            dpi=600\n",
+    "        )\n",
+    "        ax = [ax]\n",
+    "\n",
+    "        # Plot heatmap\n",
+    "        img = ax[0].imshow(\n",
+    "            cell_integrity,\n",
+    "            cmap=cmap,\n",
+    "            alpha=((cell_strength / signal_threshold).clip(0, 1) ** 2),\n",
+    "            vmin=0,\n",
+    "            vmax=1,\n",
+    "        )\n",
+    "        ax[0].invert_yaxis()\n",
+    "        ax[0].spines[[\"top\", \"right\"]].set_visible(False)\n",
+    "        ax[0].set_xlim(0,1800)\n",
+    "        ax[0].set_ylim(0,1800)\n",
+    "\n",
+    "        x_rect, y_rect = 250, 1450\n",
+    "        width, height = 100, 100\n",
+    "        ax = plt.gca()\n",
+    "        rect = patches.Rectangle(\n",
+    "            (x_rect, y_rect), width, height,\n",
+    "            linewidth=1, edgecolor='yellow', facecolor='none'\n",
+    "        )\n",
+    "        ax.add_patch(rect)\n",
+    "\n",
+    "        ax.text(\n",
+    "            x_rect + width / 2, y_rect + height + 10,\n",
+    "            \"Region 1\",\n",
+    "            color='yellow',\n",
+    "            fontsize=6,\n",
+    "            fontweight='bold',\n",
+    "            ha='center'\n",
+    "        )\n",
+    "\n",
+    "        x_rect, y_rect = 850, 1050\n",
+    "        width, height = 100, 100\n",
+    "        ax = plt.gca()\n",
+    "        rect = patches.Rectangle(\n",
+    "            (x_rect, y_rect), width, height,\n",
+    "            linewidth=1, edgecolor='yellow', facecolor='none'\n",
+    "        )\n",
+    "        ax.add_patch(rect)\n",
+    "\n",
+    "        ax.text(\n",
+    "            x_rect + width / 2, y_rect + height + 10,\n",
+    "            \"Region 3\",\n",
+    "            color='yellow',\n",
+    "            fontsize=6,\n",
+    "            fontweight='bold',\n",
+    "            ha='center'\n",
+    "        )\n",
+    "\n",
+    "        x_rect, y_rect = 1350, 1300\n",
+    "        width, height = 100, 100\n",
+    "        ax = plt.gca()\n",
+    "        rect = patches.Rectangle(\n",
+    "            (x_rect, y_rect), width, height,\n",
+    "            linewidth=1, edgecolor='yellow', facecolor='none'\n",
+    "        )\n",
+    "        ax.add_patch(rect)\n",
+    "\n",
+    "        ax.text(\n",
+    "            x_rect + width / 2, y_rect + height + 10,\n",
+    "            \"Region 2\",\n",
+    "            color='yellow',\n",
+    "            fontsize=6,\n",
+    "            fontweight='bold',\n",
+    "            ha='center'\n",
+    "        )\n",
+    "\n",
+    "        x_rect, y_rect = 200, 300\n",
+    "        width, height = 100, 100\n",
+    "        ax = plt.gca()\n",
+    "        rect = patches.Rectangle(\n",
+    "            (x_rect, y_rect), width, height,\n",
+    "            linewidth=1, edgecolor='yellow', facecolor='none'\n",
+    "        )\n",
+    "        ax.add_patch(rect)\n",
+    "\n",
+    "        ax.text(\n",
+    "            x_rect + width / 2, y_rect + height + 10,\n",
+    "            \"Region 4\",\n",
+    "            color='yellow',\n",
+    "            fontsize=6,\n",
+    "            fontweight='bold',\n",
+    "            ha='center'\n",
+    "        )\n",
+    "\n",
+    "        x_rect, y_rect = 1580, 350\n",
+    "        width, height = 100, 100\n",
+    "        ax = plt.gca()\n",
+    "        rect = patches.Rectangle(\n",
+    "            (x_rect, y_rect), width, height,\n",
+    "            linewidth=1, edgecolor='yellow', facecolor='none'\n",
+    "        )\n",
+    "        ax.add_patch(rect)\n",
+    "\n",
+    "        ax.text(\n",
+    "            x_rect + width / 2, y_rect + height + 10,\n",
+    "            \"Region 5\",\n",
+    "            color='yellow',\n",
+    "            fontsize=6,\n",
+    "            fontweight='bold',\n",
+    "            ha='center'\n",
+    "        )\n",
+    "            \n",
+    "        # fig.colorbar(img, shrink=0.8)\n",
+    "        plt.show()\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_vsi(\n",
+    "    cell_integrity,\n",
+    "    cell_strength,\n",
+    "    boundary_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[250,350],\n",
+    "    y_range=[1450, 1550],\n",
+    "    ):\n",
+    "    # Validate inputs\n",
+    "    if not (isinstance(cell_integrity, np.ndarray) and cell_integrity.ndim == 2):\n",
+    "        raise ValueError(\"cell_integrity must be a 2D numpy array.\")\n",
+    "    if not (isinstance(cell_strength, np.ndarray) and cell_strength.ndim == 2):\n",
+    "        raise ValueError(\"cell_strength must be a 2D numpy array.\")\n",
+    "\n",
+    "    figure_aspect_ratio = cell_integrity.shape[0] / cell_integrity.shape[1]\n",
+    "\n",
+    "    with plt.style.context(\"dark_background\"):\n",
+    "        # Handle colormap\n",
+    "        if cmap == \"BIH\":\n",
+    "            try:\n",
+    "                cmap = _BIH_CMAP\n",
+    "            except NameError:\n",
+    "                raise ValueError(\"BIH colormap is not defined.\")\n",
+    "\n",
+    "        fig, ax = plt.subplots(\n",
+    "            1, 1, figsize=(figure_height / figure_aspect_ratio, figure_height),\n",
+    "            dpi=600\n",
+    "        )\n",
+    "        ax = [ax]\n",
+    "\n",
+    "        # Plot heatmap\n",
+    "        img = ax[0].imshow(\n",
+    "            cell_integrity,\n",
+    "            cmap=cmap,\n",
+    "            alpha=((cell_strength / signal_threshold).clip(0, 1) ** 2),\n",
+    "            vmin=0,\n",
+    "            vmax=1,\n",
+    "        )\n",
+    "        for idx, row in boundary_df.iterrows():\n",
+    "                ax[0].plot(row['boundaryX'], row['boundaryY'], c='yellow', linewidth=1.5)\n",
+    "        ax[0].invert_yaxis()\n",
+    "        ax[0].set_xticks([])\n",
+    "        ax[0].set_yticks([])\n",
+    "\n",
+    "    # plt.title(\"VSI map\")\n",
+    "    \n",
+    "    plt.xlim(x_range)\n",
+    "    plt.ylim(y_range)\n",
+    "    plt.show()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_map = {8: 'red', 7: 'orange'}\n",
+    "\n",
+    "all_labels = banksy_result['banksy_cluster'].unique()\n",
+    "\n",
+    "unique_other_labels = [label for label in all_labels if label not in color_map]\n",
+    "num_other_labels = len(unique_other_labels)\n",
+    "\n",
+    "colormap = plt.cm.get_cmap('tab20b', num_other_labels)\n",
+    "other_colors = {label: colormap(i) for i, label in enumerate(unique_other_labels)}\n",
+    "\n",
+    "full_color_map = {**color_map, **other_colors}\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_celltypes(\n",
+    "    cell_type, \n",
+    "    boundary_df,\n",
+    "    MOD_boundary,\n",
+    "    x_range=[250, 350], \n",
+    "    y_range=[1450, 1550], \n",
+    "    cmap=full_color_map\n",
+    "):      \n",
+    "    # Ensure cmap is a dictionary\n",
+    "    if isinstance(cmap, dict):\n",
+    "        colors = cell_type['banksy_cluster'].map(cmap)\n",
+    "    else:\n",
+    "        colors = cell_type['banksy_cluster']\n",
+    "\n",
+    "    # Create figure and axis\n",
+    "    fig, ax = plt.subplots(figsize=(8, 8), dpi=600)\n",
+    "\n",
+    "    # Scatter plot\n",
+    "    sc = ax.scatter(\n",
+    "        cell_type[\"x\"],\n",
+    "        cell_type[\"y\"],\n",
+    "        s=71,\n",
+    "        c=colors\n",
+    "    )\n",
+    "\n",
+    "    for _, row in boundary_df.iterrows():\n",
+    "        ax.plot(row['boundaryX'], row['boundaryY'], c='grey', lw=1)\n",
+    "    for _, row in MOD_boundary.iterrows():\n",
+    "        ax.plot(row['boundaryX'], row['boundaryY'], c='#00bfae', lw=1)\n",
+    "\n",
+    "    # for spine in ax.spines.values():\n",
+    "    #     spine.set_visible(False)\n",
+    "\n",
+    "    # Labels and title\n",
+    "    # ax.set_title(\"Cell Types\")\n",
+    "    # ax.set_xlabel(\"(μm)\")\n",
+    "    # ax.set_ylabel(\"(μm)\")\n",
+    "\n",
+    "    # Set x and y limits\n",
+    "    ax.set_xlim(x_range)\n",
+    "    ax.set_ylim(y_range)\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### VSI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# complete vsi map\n",
+    "SIM = plot_vsi_with_squares(\n",
+    "    cell_integrity = signal_integrity,\n",
+    "    cell_strength = signal_strength,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOD_boundaries = boundaries_df[(boundaries_df['banksy'] == 8) | (boundaries_df['banksy'] == 7)]\n",
+    "other_boundaries = boundaries_df[~boundaries_df['banksy'].isin([8, 7])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### region 1\n",
+    "x_range=[250, 350], y_range=[1450, 1550]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_vsi(\n",
+    "    cell_integrity=signal_integrity,\n",
+    "    cell_strength=signal_strength,\n",
+    "    boundary_df=boundaries_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[250,350],\n",
+    "    y_range=[1450, 1550]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_celltypes(\n",
+    "    cell_type=banksy_result,\n",
+    "    boundary_df=other_boundaries,\n",
+    "    MOD_boundary=MOD_boundaries,\n",
+    "    x_range=[250,350],\n",
+    "    y_range=[1450, 1550],\n",
+    "    cmap = full_color_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### region 2\n",
+    "x_range=[1350, 1450], y_range=[1300, 1400]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_vsi(\n",
+    "    cell_integrity=signal_integrity,\n",
+    "    cell_strength=signal_strength,\n",
+    "    boundary_df=boundaries_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[1350, 1450],\n",
+    "    y_range=[1300, 1400]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_celltypes(\n",
+    "    cell_type=banksy_result,\n",
+    "    boundary_df=other_boundaries,\n",
+    "    MOD_boundary=MOD_boundaries,\n",
+    "    x_range=[1350, 1450],\n",
+    "    y_range=[1300, 1400],\n",
+    "    cmap = full_color_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### region 3\n",
+    "x_range=[850, 950], y_range=[1050, 1150]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_vsi(\n",
+    "    cell_integrity=signal_integrity,\n",
+    "    cell_strength=signal_strength,\n",
+    "    boundary_df=boundaries_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[850, 950],\n",
+    "    y_range=[1050, 1150]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_celltypes(\n",
+    "    cell_type=banksy_result,\n",
+    "    boundary_df=other_boundaries,\n",
+    "    MOD_boundary=MOD_boundaries,\n",
+    "    x_range=[850, 950],\n",
+    "    y_range=[1050, 1150],\n",
+    "    cmap = full_color_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### region 4\n",
+    "x_range=[200, 300], y_range=[300, 400]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_vsi(\n",
+    "    cell_integrity=signal_integrity,\n",
+    "    cell_strength=signal_strength,\n",
+    "    boundary_df=boundaries_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[200, 300],\n",
+    "    y_range=[300, 400]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_celltypes(\n",
+    "    cell_type=banksy_result,\n",
+    "    boundary_df=other_boundaries,\n",
+    "    MOD_boundary=MOD_boundaries,\n",
+    "    x_range=[200, 300],\n",
+    "    y_range=[300, 400],\n",
+    "    cmap = full_color_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### region 5\n",
+    "x_range=[1300, 1400], y_range=[400, 500]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_vsi(\n",
+    "    cell_integrity=signal_integrity,\n",
+    "    cell_strength=signal_strength,\n",
+    "    boundary_df=boundaries_df,\n",
+    "    signal_threshold=3.0,\n",
+    "    figure_height=10,\n",
+    "    cmap=\"BIH\",\n",
+    "    x_range=[1580, 1680],\n",
+    "    y_range=[350,450],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_celltypes(\n",
+    "    cell_type=banksy_result,\n",
+    "    boundary_df=other_boundaries,\n",
+    "    MOD_boundary=MOD_boundaries,\n",
+    "    x_range=[1580, 1680],\n",
+    "    y_range=[350,450],\n",
+    "    cmap = full_color_map\n",
+    ")"
    ]
   },
   {
